Adding query parameter organization
